# cache-sim

./: .ccls  .gitignore  CMakeLists.txt  Makefile  meson.build  shell.nix
include/: cache_stats.hpp  config.hpp  memqueue.hpp  utils.hpp
include/caches/: cache.hpp  cache_stats.hpp
include/memqueue/: memqueue.hpp
include/structures/: cache.hpp  prefetcher.hpp  replacement.hpp  structures.hpp
lib/: memqueue.cpp
scripts/: val2trace.py
src/: config.cpp  main.cpp  memqueue.cpp  utils.cpp
src/caches/: simple_direct.cpp
src/memqueue/: memqueue.cpp
tests/dhrystone/: .gitignore  Makefile  gen_trace.sh
tests/next_line/: gen_trace.sh  main.c
traces/: gen_traces.sh
